--- a/AuctionCalc/res/layout/select_list.xml
+++ b/AuctionCalc/res/layout/select_list.xml
@@ -22,14 +22,16 @@
 
         <TextView
             android:id="@+id/sNo"
-            style="@style/Number" />
+            style="@style/Number"
+            android:textColor="@color/black" />
 
         <TextView
             android:id="@+id/sName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginLeft="@dimen/dp_10" />
+            android:layout_marginLeft="@dimen/dp_10"
+            android:textColor="@color/black" />
 
     </LinearLayout>
 
