--- a/ClockStudy/res/layout/activity_main.xml
+++ b/ClockStudy/res/layout/activity_main.xml
@@ -20,9 +20,11 @@
 
     <ImageView
         android:id="@+id/imageView1"
-        android:layout_width="320dp"
-        android:layout_height="150dp"
+        android:layout_width="wrap_content"
+        android:layout_height="170dp"
         android:layout_gravity="center"
+        android:layout_marginBottom="5dp"
+        android:layout_weight="1"
         android:adjustViewBounds="true"
         android:src="@drawable/arithmetic_a08" />
 
