--- a/ClockStudy/res/layout/activity_main.xml
+++ b/ClockStudy/res/layout/activity_main.xml
@@ -28,6 +28,16 @@
         android:adjustViewBounds="true"
         android:src="@drawable/arithmetic_a08" />
 
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:layout_marginBottom="5dp"
+        android:layout_weight="1"
+        android:text="@string/soundAdd"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
+
     <Button
         android:id="@+id/button0"
         android:layout_width="match_parent"
